# stimeline

./: .clang-format  .gitignore  .gitmodules  LICENSE.md  README.md  defaults.qrc  makeDocs.sh  qml.qrc  stimeline.doxyfile  stimeline.pri  stimeline.pro  todo.md
android/: AndroidManifest.xml
android/src/stimeline/: SaveIntent.java
defaults/calendar/: dynyghtian.json  gregorian.json
exampleData/: example1.json  timeline1.json
qml/: CalendarPage.qml  DateTimeEditor.qml  EventCard.qml  EventEditor.qml  EventTimeline.qml  ObjectsPage.qml  STumbler.qml  SettingsPage.qml  main.qml
qml/cards/: ObjectCard.qml
qml/editors/: DateTimeEditor.qml  ImageChooser.qml  ObjectEditor.qml  SimpleLoadDialog.qml  SimpleSaveDialog.qml
qml/items/: SImage.qml  STumbler.qml
qml/pages/: AboutPage.qml  CalendarPage.qml  SObjectListPage.qml  SettingsPage.qml
qml/views/: SItemListView.qml
src/: CMakeLists.txt  main.cpp  qml.qrc  qmlcontroller.cpp  qmlcontroller.h  qtquickcontrols2.conf  sassistant.cpp  sassistant.h  scalendar.cpp  scalendar.h  sdatetime.cpp  sdatetime.h  serasmodel.cpp  serasmodel.h  sevent.cpp  sevent.h  seventdb.cpp  seventdb.h  seventmodel.cpp  seventmodel.h  seventptr.h  seventsortproxymodel.cpp  seventsortproxymodel.h  sobject.cpp  sobject.h  sobjectmodel.cpp  sobjectmodel.h  sobjectsortproxymodel.cpp  sobjectsortproxymodel.h  sobjecttags.cpp  sobjecttags.h  sperson.cpp  sperson.h  spersonmodel.cpp  spersonmodel.h  splot.cpp  splot.h  splotsmodel.cpp  splotsmodel.h  sqmlassistant.cpp  (+15 more)
src/android/: .gitignore  AndroidManifest.xml
src/android/src/stimeline/: SaveIntent.java
src/customItems/: eventtimeline.cpp  eventtimeline.h  eventtimelineview.cpp  eventtimelineview.h
src/defaults/calendar/: dynyghtian.json  gregorian.json
src/qml/: main.qml
src/qml/cards/: ObjectCard.qml
src/qml/editors/: DateTimeEditor.qml  FileDialogLoader.qml  ImageChooser.qml  NameEditor.qml  ObjectEditor.qml  SimpleLoadDialog.qml  SimpleSaveDialog.qml  TagEditor.qml
src/qml/items/: Plot.qml  PlotContainer.qml  STumbler.qml  Tag.qml  TagContainer.qml
src/qml/pages/: AboutPage.qml  CalendarPage.qml  ObjectsPage.qml  SObjectListPage.qml  SettingsPage.qml
tests/: testConfig.pri
tests/auto/: auto.pro
tests/auto/SCalendarTest/: SCalendarTest.pro  tst_scalendar.cpp
tests/data/: scalendar1.json  sobject1.json  testData.pri  testData.qrc
(+5 files in other folders)
